update notification email

--- a/src/main/resources/templates/payment-status-notification.html
+++ b/src/main/resources/templates/payment-status-notification.html
@@ -35,8 +35,9 @@
 
     <ul>
         <li><strong>Order ID:</strong> {{orderId}}</li>
-        <li><strong>Payment Method:</strong> {{bankType}}</li>
-        <li><strong>Amount:</strong> Rp {{amount}}</li>
+        <li><strong>Bank:</strong> {{bankType}}</li>
+        <li><strong>Virtual Account Number:</strong> {{virtualAccountNumber}}</li>
+        <li><strong>Total Amount:</strong> Rp {{amount}}</li>
         <li><strong>Paid at:</strong> {{paidAt}}</li>
         <li><strong>Status:</strong> {{status}}</li>
     </ul>
